<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_admin_nav">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/drawer_dashboard" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_person"
            android:title="@string/drawer_clients" />
        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_bookings"
            android:title="@string/drawer_bookings" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_build"
            android:title="@string/drawer_projects" />
        <item
            android:id="@+id/nav_technicians"
            android:icon="@drawable/ic_people"
            android:title="@string/drawer_technicians" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/drawer_inventory" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_description"
            android:title="@string/drawer_reports" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/drawer_logout" />
    </group>
</menu>