<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/nav_group_primary">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_my_jobs"
            android:icon="@drawable/ic_build"
            android:title="@string/nav_my_jobs" />
        <item
            android:id="@+id/nav_leave"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_apply_leave" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_description"
            android:title="@string/drawer_reports_tech" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/drawer_notifications" />
        <item
            android:id="@+id/nav_materials"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/drawer_materials" />
        <item
            android:id="@+id/nav_inventory_tech"
            android:icon="@drawable/ic_inventory"
            android:title="@string/drawer_inventory_tech" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/drawer_profile_tech" />
    </group>
    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/drawer_logout" />
    </group>
</menu>